--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,9 @@
 @import "_variables.scss";
-@import "_btn.scss";
-@import "_mario.scss";
-@import "_text-effect.scss";
-@import "_mar.scss";
-@import "_explore.scss";
+@import "_btn1.scss";
+@import "_btn2.scss";
+@import "_btn3.scss";
+@import "_btn4.scss";
+@import "_btn5.scss";
 
 .container {
     width: 80vw;
