--- a/_btn4.scss
+++ b/_btn4.scss
@@ -2,7 +2,7 @@
 
 .btn-4{
     cursor:pointer;
-        position:sticky;
+        position:absolute;
         padding:10px 20px;
         background:white;
         font-size:28px;
