--- a/_btn5.scss
+++ b/_btn5.scss
@@ -1,79 +1,35 @@
 @import "_variables.scss";
 
-body {
-	margin: 0;
-	height: 100%;
-	background-image: linear-gradient(to top, #d9afd9 0%, #97d9e1 100%);
-	background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+.wrap {
+  width: 50%;
+  margin-left: 25%;
+  background-color: #ccc;
+  height: 250px;
+  text-align:center;
+  border: 5px solid #336E7B;
 }
 
-.button_container {
-	position: absolute;
-  left: 0;
-  right: 0;
-  top: 30%;
-}
-
-.description, .link {
-  font-family: 'Amatic SC', cursive;
-  text-align: center;
-}
-
-.description {
-	font-size: 35px;
-}
-
-.btn-5 {
-  border: none;
-  display: block;
-  text-align: center;
-  cursor: pointer;
-  text-transform: uppercase;
-  outline: none;
-  overflow: hidden;
-  position: relative;
+.slide {
+  position: static;
   color: #fff;
-  font-weight: 700;
-  font-size: 15px;
-  background-color: #222;
-  padding: 17px 60px;
-  margin: 0 auto;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.20);
-}
-
-.btn-5 span {
-  position: relative; 
-  z-index: 1;
-}
-
-.btn-5:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 490%;
-  width: 140%;
-  background: #78c7d2;
-  -webkit-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
-  transform: translateX(-98%) translateY(-25%) rotate(45deg);
-}
-
-.btn-5:hover:after {
-  -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
-  transform: translateX(-9%) translateY(-25%) rotate(45deg);
-}
-
-.link {
-  font-size: 20px;
-  margin-top: 30px;
-}
-
-.link a {
-  color: #000;
-  font-size: 25px; 
-}
+  line-height: 250px;
+  text-decoration: none;
+  border-radius: 5em;
+  padding: 15px 50px;
+  font-size: 2em;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
   
+background: -webkit-linear-gradient(right, #336E7B 50%, #E26A6A 50%);
+background: -moz-linear-gradient(right, #336E7B 50%, #E26A6A 50%);
+background: -o-linear-gradient(right, #336E7B 50%, #E26A6A 50%);
+background: linear-gradient(to left, #336E7B 50%, #E26A6A 50%);
+  
+	background-size: 200% 100%;
+	background-position: left bottom;
+	transition: all 1s ease;
+}
+
+.slide:hover {
+	background-position: right bottom;
+}
